--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -57,14 +57,19 @@ jobs:
           filename: assert/github-metrics.svg
           plugins: stars,activity,repositories,followers,languages,traffic
 
-      # 6. Check for changes
+     
+      # 6. 移动所有SVG到assert目录
+      - name: Move SVG files to assert
+        run: |
+          mv *.svg assert/
+      # 7. 检查文件变化
       - name: Check for changes
         id: changes
         run: |
           git add assert/*.svg
           git diff --quiet && echo "has_changes=false" >> $GITHUB_OUTPUT || echo "has_changes=true" >> $GITHUB_OUTPUT
 
-      # 7. Commit changes if needed
+      # 8. 提交变更
       - name: Commit and push changes
         if: steps.changes.outputs.has_changes == 'true'
         uses: stefanzweifel/git-auto-commit-action@v5
