--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,24 +1,19 @@
-name: generate snake
+name: Snake Contrib
 
 on:
-  schedule: # UTC 0:00 Beijing 8:00 (北京时间0点自动更新一次)
+  schedule:
     - cron: "0 0 * * *"
-  
+
   # allows to manually run the job at any time
   workflow_dispatch:
-  
-  # run on every push on the master branch
-  push:
-    branches:
-    - master
-  
+
 jobs:
   generate:
-    permissions: 
+    permissions:
       contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    
+
     steps:
       # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
@@ -26,8 +21,16 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/assert/github-contribution-grid-snake.svg
-            dist/assert/github-contribution-grid-snake-dark.svg?palette=github-dark
-          
+            dist/profile-snake-contrib/github-contribution-grid-snake.svg
+            dist/profile-snake-contrib/github-contribution-grid-snake-dark.svg?palette=github-dark
+
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: master
+          build_dir: dist
+          keep_history: true
         env:
-          GITHUB_TOKEN: ${{ secrets.NICK_2025 }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
